Add @simba611 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -234,6 +234,16 @@
         "code",
         "test"
       ]
+    },
+    {
+      "login": "simba611",
+      "name": "simba611",
+      "avatar_url": "https://avatars.githubusercontent.com/u/59763921?v=4",
+      "profile": "https://github.com/simba611",
+      "contributions": [
+        "code",
+        "test"
+      ]
     }
   ],
   "contributorsPerLine": 7
