--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -358,6 +358,16 @@
         "code",
         "infra"
       ]
+    },
+    {
+      "login": "FlyGoat",
+      "name": "Jiaxun Yang",
+      "avatar_url": "https://avatars.githubusercontent.com/u/5955297?v=4",
+      "profile": "https://flygoat.com/",
+      "contributions": [
+        "code",
+        "platform"
+      ]
     }
   ],
   "contributorsPerLine": 7
