--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -378,6 +378,16 @@
         "code",
         "test"
       ]
+    },
+    {
+      "login": "operasfantom",
+      "name": "Pavel Iatchenii",
+      "avatar_url": "https://avatars.githubusercontent.com/u/31903947?v=4",
+      "profile": "https://github.com/operasfantom",
+      "contributions": [
+        "code",
+        "test"
+      ]
     }
   ],
   "contributorsPerLine": 7
