--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -424,6 +424,15 @@
       "contributions": [
         "maintenance"
       ]
+    },
+    {
+      "login": "Epixu",
+      "name": "Dimo Markov",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1529601?v=4",
+      "profile": "https://github.com/Epixu",
+      "contributions": [
+        "maintenance"
+      ]
     }
   ],
   "contributorsPerLine": 7
