--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -442,6 +442,16 @@
       "contributions": [
         "maintenance"
       ]
+    },
+    {
+      "login": "zekehul",
+      "name": "zekehul",
+      "avatar_url": "https://avatars.githubusercontent.com/u/8780526?v=4",
+      "profile": "https://github.com/zekehul",
+      "contributions": [
+        "code",
+        "maintenance"
+      ]
     }
   ],
   "contributorsPerLine": 7
