--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -452,6 +452,15 @@
         "code",
         "maintenance"
       ]
+    },
+    {
+      "login": "LaurentThomas",
+      "name": "Laurent Thomas",
+      "avatar_url": "https://avatars.githubusercontent.com/u/40661368?v=4",
+      "profile": "https://open-cells.com",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
