--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -470,6 +470,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "psaab",
+      "name": "psaab",
+      "avatar_url": "https://avatars.githubusercontent.com/u/196946?v=4",
+      "profile": "https://github.com/psaab",
+      "contributions": [
+        "maintenance"
+      ]
     }
   ],
   "contributorsPerLine": 7
