Add @quyykk as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -528,6 +528,15 @@
       "contributions": [
         "maintenance"
       ]
+    },
+    {
+      "login": "quyykk",
+      "name": "Nick",
+      "avatar_url": "https://avatars.githubusercontent.com/u/85879619?v=4",
+      "profile": "https://github.com/quyykk",
+      "contributions": [
+        "maintenance"
+      ]
     }
   ],
   "contributorsPerLine": 7
