Add @thomasdwu as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -537,6 +537,15 @@
       "contributions": [
         "maintenance"
       ]
+    },
+    {
+      "login": "thomasdwu",
+      "name": "thomasdwu",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6819659?v=4",
+      "profile": "https://github.com/thomasdwu",
+      "contributions": [
+        "maintenance"
+      ]
     }
   ],
   "contributorsPerLine": 7
