--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -555,6 +555,16 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "Pabs",
+      "name": "pabs",
+      "avatar_url": "https://avatars.githubusercontent.com/u/238903?v=4",
+      "profile": "https://github.com/Pabs",
+      "contributions": [
+        "bug",
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
