--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -583,6 +583,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "p0nce",
+      "name": "p0nce ",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1067485?v=4",
+      "profile": "https://github.com/p0nce",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
