--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -644,3 +644,38 @@ jobs:
         run: |
           meson --backend=ninja build --cross-file test/arm64cl.txt
           meson test -C build --print-errorlogs $(meson test -C build --list | grep -v emul)
+
+  linux-gcc-loongarch64:
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v3
+    - name: CPU Information
+      run: cat /proc/cpuinfo
+    - name: Install APT Dependencies
+      run: |
+        sudo add-apt-repository ppa:savoury1/virtualisation
+        sudo apt-get install -y ninja-build ninja-build meson qemu-user-static
+    - name: Download and install loongarch64-toolchain
+      run: |
+        wget https://github.com/loongson/build-tools/releases/download/2022.09.06/loongarch64-clfs-7.3-cross-tools-gcc-glibc.tar.xz
+        tar -xf loongarch64-clfs-7.3-cross-tools-gcc-glibc.tar.xz -C /opt
+    - name: ccache
+      uses: hendrikmuhs/ccache-action@v1.2
+      with:
+        key: ${{ github.job }}-loongarch64-gcc-13
+    - name: set env
+      run: |
+        echo "LD_LIBRARY_PATH=/opt/cross-tools/target/usr/lib64:/opt/cross-tools/loongarch64-unknown-linux-gnu/lib64:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+        echo "PATH=$GITHUB_WORKSPACE:/opt/cross-tools/bin:$PATH" >> $GITHUB_ENV
+    - name: Disable SVML tests
+      run: |
+        sed -i "/svml/d" test/x86/meson.build
+        rm test/x86/svml.c
+        echo "Due to the qemu versions 7.2 through 8.0 causing timeouts in four sets of test cases,"
+        echo "the SVML tests have been temporarily disabled."
+    - name: Configure
+      run: meson setup build --cross-file=docker/cross-files/loongarch64-gcc-13-ccache.cross
+    - name: Build
+      run: meson compile -C build -v
+    - name: Test
+      run: meson test -C build --print-errorlogs
