--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -334,8 +334,6 @@ jobs:
           arch_gnu: s390x
           arch_deb: s390x
           distro: ubuntu-22.04
-        # power: 150 failures: x86/{avx512/range,sse,sse3}, arm/neon/*, wasm_simd128/, wasm_relexad_simd/*
-        # https://github.com/simd-everywhere/simde/issues/903
         - version: 12
           cross: power9
           arch_gnu: powerpc64le
@@ -351,7 +349,7 @@ jobs:
       run: cat /proc/cpuinfo
     - name: Install APT Dependencies
       run: |
-        sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+        sudo add-apt-repository ppa:savoury1/virtualisation
         sudo apt-get update -y
         sudo apt-get -yq install ninja-build parallel \
           gcc-${{ matrix.version }}-${{ matrix.arch_gnu }}-linux-gnu \
