avx512 new families started: gather/reduce + other additional funcs

--- a/meson.build
+++ b/meson.build
@@ -257,6 +257,7 @@ simde_avx512_families = [
   'fnmadd',
   'fnmsub',
   'fpclass',
+  'gather',
   'insert',
   'kshift',
   'knot',
@@ -285,6 +286,7 @@ simde_avx512_families = [
   'popcnt',
   'range',
   'range_round',
+  'reduce',
   'rol',
   'rolv',
   'ror',
